--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^2.10.7",
+    "astro-seo": "^0.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "react": "^18.0.0",
