--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.3",
     "@astrojs/react": "^2.2.1",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
@@ -24,6 +25,7 @@
     "clsx": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "sharp": "^0.32.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.0.24",
     "tailwindcss-animate": "^1.0.6"
