--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "tailwindcss": "^3.0.24",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
