--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^3.1.0",
-    "@astrojs/sitemap": "^3.1.2",
+    "@astrojs/react": "3.6.0",
+    "@astrojs/sitemap": "3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.5.0",
+    "@astrojs/vercel": "7.7.2",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^4.5.12",
+    "astro": "4.11.5",
     "astro-seo": "^0.7.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
